--- a/pyalgoviz.css
+++ b/pyalgoviz.css
@@ -32,10 +32,36 @@
     min-width: 20px;
 }
 
+.editor {
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
 .editor_line {
     background-color: rgb(207, 214, 217)
 }
 
 .choice-button {
     margin-right: 8px;
+}
+
+.log-algo {
+    width: 100%;
+    height: 100%;
+}
+
+.error {
+    display: block;
+    color: red;
+    font-size: 13px;
+    margin-top: 12px;
+}
+
+.log-viz {
+    width: 100%;
+    height: 100%;
+}
+
+.ui-dialog {
+    z-index: 10000;
 }
