--- a/pyalgoviz.css
+++ b/pyalgoviz.css
@@ -77,3 +77,17 @@
 .ui-tabs .ui-tabs-panel {
     padding: 0 8px;
 }
+
+.ui-dialog .ui-dialog-content {
+    background-color: rgb(253, 255, 246);
+}
+
+.choice-category {
+    background-color: white;
+    padding: 8px;
+    border: 1px solid gray;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    margin: 8px;
+    width: fit-content;
+    float: left;
+}
